manifests/fasttrackml/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fml-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fml
  template:
    metadata:
      labels:
        app: fml
    spec:
      containers:
      - name: fml
        image: gresearch/fasttrackml
        command: ["fml", "server", "--auth-username", "$(FML_USERNAME)", "--auth-password", "$(FML_PASSWORD)"]
        volumeMounts:
        - name: fml-data
          mountPath: /data
      volumes:
      - name: fml-data
        persistentVolumeClaim:
          claimName: fml-pvc

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fml-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls.certresolver: "fml-mcaq-me-tls"
spec:
  tls:
  - hosts:
      - fml.mcaq.me
    secretName: fml-mcaq-me-tls
  rules:
  - host: fml.mcaq.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fml-service
              port:
                number: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: fml-service
spec:
  selector:
    app: fml
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
